# Rust-Ironclad

./: .env  .env.example  .gitignore  Cargo.toml  IMPLEMENTATION.md  LICENSE  README.md
migrations/: 001_create_users_table.sql  002_add_role_to_users.sql  003_create_test_table.sql  004_create_jobs_table.sql  005_create_dead_letter_queue.sql
src/: app_state.rs  macros.rs  main.rs  route_registry.rs
src/application/: mod.rs
src/application/dtos/: auth_dto.rs  mod.rs  test_item_dto.rs
src/application/services/: alert_service.rs  auth_service.rs  mod.rs  test_item_service.rs  user_service.rs
src/bootstrap/: app_state.rs  macros.rs  mod.rs  providers.rs
src/cli/: main.rs
src/config/: mod.rs  validators.rs
src/db/: mod.rs  mongo.rs  multiple_db_config.rs  mysql.rs  postgres.rs
src/domain/entities/: mod.rs  test_item.rs  user.rs
src/domain/value_objects/: email_address.rs  mod.rs  role.rs  username.rs
src/errors/: mod.rs
src/handlers/: auth.rs  users.rs
src/handlers/examples/: users.examle.rs
src/infrastructure/: mod.rs
src/infrastructure/http/: authentication.rs  mod.rs
src/infrastructure/http/controllers/: auth_controller.rs  health_controller.rs  mod.rs  queue_controller.rs  test_item_controller.rs  user_controller.rs
src/infrastructure/http/handlers/: mod.rs  not_found.rs
src/infrastructure/persistence/: mod.rs
src/infrastructure/persistence/postgres/: mod.rs  test_item_repository.rs  user_repository.rs
src/interfaces/: mod.rs
src/interfaces/repositories/: mod.rs  test_item_repository.rs  user_repository.rs
src/middleware/: auth.rs  maintenance.rs  mod.rs  rate_limit.rs  role.rs
src/models/: user.rs
src/monitoring/: alerts.rs  mod.rs  queue_monitor.rs
src/queue/: job.rs  manager.rs  mod.rs  worker.rs
src/routes/: api.rs  mod.rs
src/shared/: mod.rs
src/shared/extractors/: mod.rs  validated_json.rs
src/shared/validator/: mod.rs
src/storage/framework/: maintenance.json
src/templates/render/down/emergency/: default.html  low.html
src/templates/render/down/maintenance/: database.html
src/utils/: auth.rs  jwt.rs
static/: clock.css  clock.js
templates/framework/: dashboard.html
templates/render/down/: default.html
templates/system/: dashboard.html
