[package]
name = "template_project"
version = "0.0.1"
authors = ["Ale"]
edition = "2021"
description = "MVC framework for Rust artisans."

[dependencies]
# Web Framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Database - PostgreSQL
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

# Database - MongoDB (Optional)
mongodb = "2.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Configuration
dotenv = "0.15"
config = "0.13"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP Client (para requests internos)
reqwest = { version = "0.11", features = ["json"] }

# Datetime
chrono = { version = "0.4", features = ["serde"] }

# Macros
lazy_static = "1.4"

# Futures
futures = "0.3"
