[package]
name = "template_project"
version = "0.0.3"
authors = ["Ale"]
edition = "2021"
description = "MVC framework for Rust artisans."

[dependencies]

# System Information (optional)
sysinfo = { version = "0.30", features = ["serde"] }

# Web Framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Database - PostgreSQL
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "runtime-tokio-native-tls", "postgres", "chrono"] }

# Database - MongoDB (Optional)
mongodb = "2.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Configuration
dotenv = "0.15"
config = "0.13"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP Client (para requests internos)
reqwest = { version = "0.11", features = ["json"] }

# Datetime
chrono = { version = "0.4", features = ["serde"] }

# Macros
lazy_static = "1.4"

# Futures
futures = "0.3"

# Async Trait
async-trait = "0.1"

# CLI
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
# Testing
mockall = "0.12"
tokio-test = "0.4"

[[bin]]
name = "cli"
path = "src/cli/main.rs"
required-features = []
